--- a/class-booking.html
+++ b/class-booking.html
@@ -39,6 +39,13 @@
     .info-section ul { padding-left: 1.2rem; }
     .info-section li { margin-bottom: 0.5rem; }
 
+
+    /* ====== where above booking ====== */
+    .where { margin-top: 1.6rem; background: #fff; padding: 1.5rem; border-radius: 10px; text-align: left; border: 1px solid rgba(0,0,0,.08); }
+    .where h2 { font-size: 1.5rem; margin-bottom: 1rem; font-weight: 600; }
+    .where ul { padding-left: 1.2rem; }
+    .where li { margin-bottom: 0.5rem; }
+
     /* ====== Booking grid ====== */
     .calendar { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 1rem; margin: 2rem auto 0; padding: 0 .5rem; max-width: 900px; }
     .card { background: #fff; border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 1rem; text-align: left; box-shadow: 0 2px 8px rgba(0,0,0,0.04); display: grid; gap: 0.5rem; }
