--- a/class-booking.html
+++ b/class-booking.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bodhi Swan Ceramics — Workshops</title>
   <style>
+
+    .faq-tile-link {
+      display: inline-block;
+      background-color: #f5f5f5;   /* same light background as tiles */
+      color: black;
+      padding: 10px 15px;
+      border-radius: 8px;          /* match tile corner radius */
+      text-decoration: none;
+      font-family: inherit;        /* same font as surrounding text */
+      font-size: 1rem;
+      border: 1px solid #ddd;      /* match tile border */
+      transition: background-color 0.2s ease;
+    }
+
+  .faq-tile-link:hover {
+    background-color: #eaeaea;   /* slight hover effect like tiles */
+    }
+
     /* ====== Base (keep your header font & feel) ====== */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html { scroll-behavior: smooth; }
@@ -85,7 +103,9 @@
         <a class="btn" href="https://buy.stripe.com/00w5kC8006se4qN4BEgIo08">Subscribe Now</a>
         <a class="btn secondary" href="#booking">See September Dates</a>
       </div>
-      <div class="disclaimer">Cost does not include clay, firings or glazing — <a href="/faq">check the FAQ for more details</a>.</div>
+      <div class="disclaimer">Cost does not include clay, firings or glazing — <a href="https://bodhiswan.com/faq" class="faq-tile-link">
+  check the FAQ for more details
+</a>
     </div>
 
     <section class="info-section" aria-labelledby="structure">
