--- a/class-booking.html
+++ b/class-booking.html
@@ -6,22 +6,41 @@
   <title>Bodhi Swan Ceramics — Workshops</title>
   <style>
 
-    .faq-tile-link {
-      display: inline-block;
-      background-color: #f5f5f5;   /* same light background as tiles */
-      color: black;
-      padding: 10px 15px;
-      border-radius: 8px;          /* match tile corner radius */
-      text-decoration: none;
-      font-family: inherit;        /* same font as surrounding text */
-      font-size: 1rem;
-      border: 1px solid #ddd;      /* match tile border */
-      transition: background-color 0.2s ease;
-    }
 
-  .faq-tile-link:hover {
-    background-color: #eaeaea;   /* slight hover effect like tiles */
-    }
+.actions {
+  margin-top: .8rem;
+  display: flex;
+  justify-content: center;
+  gap: .75rem;
+  flex-wrap: wrap;
+  margin-bottom: 0.5rem; /* a little less so FAQ is closer to buttons */
+}
+
+.faq-tile-link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+  cursor: pointer;
+  text-decoration: none;
+  padding: .7rem 1.1rem;
+  border-radius: 999px; /* same pill shape as buttons */
+  font-weight: 600;
+  border: 2px solid #111;
+  color: #111;
+  background: #fff;
+  box-shadow: 0 2px 8px rgba(0,0,0,.06);
+  transition: transform .15s ease, background .15s ease, color .15s ease, box-shadow .15s ease;
+  margin-top: 0.75rem; /* spacing from buttons */
+}
+
+.faq-tile-link:hover {
+  background: #111;
+  color: #fff;
+  transform: translateY(-1px);
+  box-shadow: 0 6px 16px rgba(0,0,0,.12);
+}
+
 
     /* ====== Base (keep your header font & feel) ====== */
     * { margin: 0; padding: 0; box-sizing: border-box; }
