--- a/shopold.html
+++ b/shopold.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Shop - Bodhi Swan Ceramics</title>
   <script src="https://js.stripe.com/v3/"></script>
-  <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
-  <link rel="shortcut icon" href="assets/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
+  <link rel="shortcut icon" href="assets/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Bodhi Swan" />
-  <link rel="manifest" href="assets/site.webmanifest" />
+  <link rel="manifest" href="assets/icons/site.webmanifest" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -119,7 +119,7 @@
     </header>
     <div class="shop-grid">
       <div class="product-card">
-        <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" 
+        <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" 
              alt="Hand-thrown espresso cup with smooth glaze finish" 
              class="product-image" loading="lazy">
         <div class="product-info">
@@ -210,3 +210,4 @@
     });
   });
 </script>
+
