--- a/success.html
+++ b/success.html
@@ -6,12 +6,12 @@
     <title>Order Successful - Bodhi Swan Ceramics</title>
     
     <!-- Your existing head content -->
-    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
-    <link rel="shortcut icon" href="assets/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
+    <link rel="shortcut icon" href="assets/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Bodhi Swan" />
-    <link rel="manifest" href="assets/site.webmanifest" />
+    <link rel="manifest" href="assets/icons/site.webmanifest" />
     
     <style>
         * {
@@ -154,3 +154,4 @@
     </div>
 </body>
 </html>
+
