--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <nav class="navigation">
             <div class="links">
                 <a href="class-booking.html" class="button">Classes</a>
-                <a href="shop.html" class="button">Shop</a>
+                <a href="soon.html" class="button">Shop</a>
                 <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
             </div>
         </nav>
