Add SEO and tracking features: robots.txt, sitemap.xml, Google Analytics, meta tags, and image optimization

--- a/BSC1.html
+++ b/BSC1.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bodhi Swan Ceramics</title>
+    <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.">
+    <meta property="og:site_name" content="Bodhi Swan Ceramics">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="sitemap" href="/sitemap.xml">
+    <link rel="stylesheet" href="assets/css/components.css">
+    <script defer src="assets/js/site.js"></script>
     <style>
         * {
             margin: 0;
@@ -113,10 +119,10 @@
         <h1>Bodhi Swan Ceramics</h1>
         
         <div class="gallery">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 1">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 2">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 3">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 4">
+            <img src="/api/placeholder/300/300" alt="Ceramic piece 1" loading="lazy" width="300" height="300">
+            <img src="/api/placeholder/300/300" alt="Ceramic piece 2" loading="lazy" width="300" height="300">
+            <img src="/api/placeholder/300/300" alt="Ceramic piece 3" loading="lazy" width="300" height="300">
+            <img src="/api/placeholder/300/300" alt="Ceramic piece 4" loading="lazy" width="300" height="300">
         </div>
 
         <div class="bio">
