--- a/class-booking.html
+++ b/class-booking.html
@@ -4,7 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bodhi Swan Ceramics — Workshops</title>
+  <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.">
+  <meta property="og:site_name" content="Bodhi Swan Ceramics">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="sitemap" href="/sitemap.xml">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <script defer src="assets/js/site.js"></script>
 </head>
 <body>
   <div class="container">
