--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="refresh" content="0; url=https://www.etsy.com/au/shop/BodhiSwanCeramics" />
   <title>Redirecting to Etsy</title>
+  <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.">
+  <meta property="og:site_name" content="Bodhi Swan Ceramics">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="sitemap" href="/sitemap.xml">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <script defer src="assets/js/site.js"></script>
   <style>
     body {
       font-family: sans-serif;
