--- a/shopold.html
+++ b/shopold.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Shop - Bodhi Swan Ceramics</title>
+  <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.">
+  <meta property="og:site_name" content="Bodhi Swan Ceramics">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="sitemap" href="/sitemap.xml">
   <script src="https://js.stripe.com/v3/"></script>
   <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
@@ -12,6 +16,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Bodhi Swan" />
   <link rel="manifest" href="assets/icons/site.webmanifest" />
+  <link rel="stylesheet" href="assets/css/components.css">
+  <script defer src="assets/js/site.js"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -119,9 +125,9 @@
     </header>
     <div class="shop-grid">
       <div class="product-card">
-        <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" 
-             alt="Hand-thrown espresso cup with smooth glaze finish" 
-             class="product-image" loading="lazy">
+        <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg"
+             alt="Hand-thrown espresso cup with smooth glaze finish"
+             class="product-image" loading="lazy" width="300" height="300">
         <div class="product-info">
           <h2 class="product-title">Handcrafted Espresso Cup</h2>
           <p class="product-description">A meticulously wheel-thrown espresso cup, perfect for your morning ritual. Features a smooth interior glaze and natural exterior finish.</p>
