--- a/soon.html
+++ b/soon.html
@@ -5,7 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bodhi Swan Ceramics — Coming Soon</title>
-  <meta name="description" content="Bodhi Swan Ceramics — new site coming soon." />
+  <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing." />
+  <meta property="og:site_name" content="Bodhi Swan Ceramics">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="sitemap" href="/sitemap.xml">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <script defer src="assets/js/site.js"></script>
   <style>
     :root{
       --bg:#0f0f12;
@@ -67,7 +72,7 @@
   <div class="noise" aria-hidden="true"></div>
   <div class="wrap">
     <header aria-label="Bodhi Swan Ceramics">
-      <img src="images/348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics logo" />
+      <img src="images/348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics logo" loading="lazy" width="64" height="64" />
       <h1>Bodhi Swan Ceramics</h1>
     </header>
 
