--- a/success.html
+++ b/success.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Successful - Bodhi Swan Ceramics</title>
-    
+    <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.">
+    <meta property="og:site_name" content="Bodhi Swan Ceramics">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="sitemap" href="/sitemap.xml">
+
     <!-- Your existing head content -->
     <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
@@ -12,6 +16,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Bodhi Swan" />
     <link rel="manifest" href="assets/icons/site.webmanifest" />
+    <link rel="stylesheet" href="assets/css/components.css">
+    <script defer src="assets/js/site.js"></script>
     
     <style>
         * {
