--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- Primary Meta Tags -->
     <title>Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane</title>
     <meta name="title" content="Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane">
-    <meta name="description" content="Discover handcrafted ceramic pieces that blend traditional throwing techniques with contemporary design. Brisbane-based artisan creating functional pottery since 2020.">
+    <meta name="description" content="Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.">
+    <meta property="og:site_name" content="Bodhi Swan Ceramics">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="keywords" content="ceramics, pottery, Brisbane pottery, handmade ceramics, ceramic art, Bodhi Swan, artisan pottery, functional ceramics, handcrafted pottery, Australian ceramics">
     <meta name="author" content="Bodhi Swan Ceramics">
     <meta name="robots" content="index, follow">
@@ -35,12 +37,15 @@
     <meta property="twitter:image" content="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg">
     
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/components.css">
+    <link rel="sitemap" href="/sitemap.xml">
+    <script defer src="assets/js/site.js"></script>
     <script defer src="assets/js/navigation.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics Logo" class="logo">
+            <img src="images/348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics Logo" class="logo" width="100" height="100">
             <h1>Bodhi Swan Ceramics</h1>
         </div>
 
@@ -59,10 +64,10 @@
         </nav>
         
         <div class="gallery">
-            <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Handcrafted ceramic bowl with unique glaze pattern" loading="lazy">
-            <img src="images/bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" alt="Contemporary ceramic vase with minimalist design" loading="lazy">
-            <img src="images/bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg" alt="Artisanal pottery piece showcasing traditional techniques" loading="lazy">
-            <img src="images/bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg" alt="Modern ceramic creation with distinctive finish" loading="lazy">
+            <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Handcrafted ceramic bowl with unique glaze pattern" loading="lazy" width="300" height="300">
+            <img src="images/bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" alt="Contemporary ceramic vase with minimalist design" loading="lazy" width="300" height="300">
+            <img src="images/bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg" alt="Artisanal pottery piece showcasing traditional techniques" loading="lazy" width="300" height="300">
+            <img src="images/bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg" alt="Modern ceramic creation with distinctive finish" loading="lazy" width="300" height="300">
         </div>
 
         <div class="bio">
@@ -84,7 +89,7 @@
             <h2 style="text-align: center; font-size: 2rem; font-weight: 300; margin-bottom: 2rem;">Available Works</h2>
             <div class="shop-grid">
                 <div class="product-card">
-                    <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Hand-thrown espresso cup with smooth glaze finish" class="product-image" loading="lazy">
+                    <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Hand-thrown espresso cup with smooth glaze finish" class="product-image" loading="lazy" width="300" height="300">
                     <div class="product-info">
                         <h3 class="product-title">Handcrafted Espresso Cup</h3>
                         <p class="product-description">A meticulously wheel-thrown espresso cup, perfect for your morning ritual. Features a smooth interior glaze and natural exterior finish.</p>
