Implement advanced SEO features: unique meta tags, Open Graph, JSON-LD schemas, UTM tracking, and enhanced analytics

--- a/success.html
+++ b/success.html
@@ -161,3 +161,33 @@
 </body>
 </html>
 
+
+    <!-- LocalBusiness JSON-LD Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Bodhi Swan Ceramics",
+        "url": "https://bodhiswan.com",
+        "logo": "https://bodhiswan.com/images/348982356_573566748281355_5155277251296915931_n.jpg",
+        "image": "https://bodhiswan.com/images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg",
+        "description": "Handmade ceramics and pottery classes in Taringa, Brisbane. Small groups, beginner-friendly wheel throwing.",
+        "areaServed": "Brisbane",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Taringa",
+            "addressRegion": "QLD",
+            "addressCountry": "AU"
+        },
+        "telephone": "0478756284",
+        "email": "swan1995@gmail.com",
+        "sameAs": [
+            "https://instagram.com/bodhiswan",
+            "https://www.etsy.com/au/shop/BodhiSwanCeramics"
+        ],
+        "openingHours": "By appointment",
+        "priceRange": "$60-$100"
+    }
+    </script>
+</body>
+</html>
