Improve button consistency and subscription information on class booking page
- Standardized all booking buttons to use consistent 'button' class instead of mixed 'btn' classes
- Removed 'Subscribe Now' button and replaced with informational subscription tile
- Added styled subscription-info section explaining weekly payment setup process
- Enhanced visual hierarchy with proper background, borders, and typography
- Maintained consistent glassmorphism design language throughout the page

--- a/class-booking.html
+++ b/class-booking.html
@@ -69,8 +69,10 @@
     <div class="prices">
       <p><strong>$60</strong> per class or <strong>$50/week</strong> with a subscription</p>
       <div class="actions">
-        <a class="btn" href="https://buy.stripe.com/00w5kC8006se4qN4BEgIo08" data-cta="book-class">Subscribe Now</a>
-        <a class="btn secondary" href="#booking">See September Dates</a>
+        <a class="btn" href="#booking">See September Dates</a>
+      </div>
+      <div class="subscription-info">
+        <p><strong>Weekly Payments:</strong> Subscription payments can be established once you have attended your first class. This allows you to secure the discounted rate of $50 per week for ongoing sessions.</p>
       </div>
       <div class="disclaimer">Cost does not include clay, firings or glazing — <a href="https://bodhiswan.com/faq" class="faq-tile-link">
   check the FAQ for more details
@@ -99,27 +101,27 @@
       <article class="card" role="listitem">
         <div class="date">Mon 1 Sep</div>
         <div class="meta">6:00–9:00 pm</div>
-        <a class="btn" href="https://buy.stripe.com/8x214m5RS4k63mJ0logIo03" data-cta="book-class">Book 1 Sep</a>
+        <a class="button" href="https://buy.stripe.com/8x214m5RS4k63mJ0logIo03" data-cta="book-class">Book 1 Sep</a>
       </article>
       <article class="card" role="listitem">
         <div class="date">Mon 8 Sep</div>
         <div class="meta">6:00–9:00 pm</div>
-        <a class="btn" href="https://buy.stripe.com/8x29ASfssg2O1eB4BEgIo02" data-cta="book-class">Book 8 Sep</a>
+        <a class="button" href="https://buy.stripe.com/8x29ASfssg2O1eB4BEgIo02" data-cta="book-class">Book 8 Sep</a>
       </article>
       <article class="card" role="listitem">
         <div class="date">Mon 15 Sep</div>
         <div class="meta">6:00–9:00 pm</div>
-        <a class="btn" href="https://buy.stripe.com/cNi5kCbcceYK3mJgkmgIo04" data-cta="book-class">Book 15 Sep</a>
+        <a class="button" href="https://buy.stripe.com/cNi5kCbcceYK3mJgkmgIo04" data-cta="book-class">Book 15 Sep</a>
       </article>
       <article class="card" role="listitem">
         <div class="date">Mon 22 Sep</div>
         <div class="meta">6:00–9:00 pm</div>
-        <a class="btn" href="https://buy.stripe.com/14A5kCeoog2O8H3b02gIo05" data-cta="book-class">Book 22 Sep</a>
+        <a class="button" href="https://buy.stripe.com/14A5kCeoog2O8H3b02gIo05" data-cta="book-class">Book 22 Sep</a>
       </article>
       <article class="card" role="listitem">
         <div class="date">Mon 29 Sep</div>
         <div class="meta">6:00–9:00 pm</div>
-        <a class="btn" href="https://buy.stripe.com/bJe5kCa883g20ax2twgIo07" data-cta="book-class">Book 29 Sep</a>
+        <a class="button" href="https://buy.stripe.com/bJe5kCa883g20ax2twgIo07" data-cta="book-class">Book 29 Sep</a>
       </article>
     </div>
 
