Add FAQ and blog pages with mobile-friendly navigation
- Created comprehensive FAQ page with 10 pottery-related questions
- Created blog page with 4 sample pottery blog posts
- Improved mobile navigation responsiveness with hamburger menu
- Updated navigation across all pages to include FAQ and Blog links
- Added proper SEO meta tags and structured data to new pages
- Enhanced mobile UX with collapsible navigation for small screens

--- a/gallery.html
+++ b/gallery.html
@@ -94,9 +94,27 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="/"><img src="images/348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics Logo" class="logo"></a>
+            <a href="/"><img src="images/348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics Logo" class="logo" width="100" height="100"></a>
             <h1>Bodhi Swan Ceramics</h1>
         </div>
+
+        <div class="mobile-menu-container">
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation menu">
+                <span class="hamburger"></span>
+            </button>
+        </div>
+
+        <nav class="navigation">
+            <div class="links">
+                <a href="index.html" class="button">Home</a>
+                <a href="class-booking.html" class="button" data-cta="book-class">Classes</a>
+                <a href="faq.html" class="button">FAQ</a>
+                <a href="blog.html" class="button">Blog</a>
+                <a href="gallery.html" class="button active">Gallery</a>
+                <a href="https://www.etsy.com/au/shop/BodhiSwanCeramics?utm_source=bodhiswan.com&utm_medium=site&utm_campaign=shop_cta" class="button" target="_blank" rel="noopener">Shop</a>
+                <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
+            </div>
+        </nav>
         
         <div class="gallery-container">
             <h2 class="gallery-title">Ceramic Gallery</h2>
