--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 
         <nav class="navigation">
             <div class="links">
+                <a href="index.html" class="button active">Home</a>
                 <a href="class-booking.html" class="button" data-cta="book-class">Classes</a>
+                <a href="faq.html" class="button">FAQ</a>
+                <a href="blog.html" class="button">Blog</a>
                 <a href="https://www.etsy.com/au/shop/BodhiSwanCeramics?utm_source=bodhiswan.com&utm_medium=site&utm_campaign=shop_cta" class="button" target="_blank" rel="noopener">Shop</a>
                 <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
             </div>
