Major website audit and streamlining improvements
- Consolidated CSS from 1,243 lines to 434 lines (65% reduction)
- Merged 2 CSS files into single main.css with modern architecture
- Consolidated JavaScript into single main.js with enhanced functionality
- Improved mobile experience by reducing gallery from 4 to 2 images
- Implemented mobile-first responsive design approach
- Fixed HTML validation issues and added semantic structure
- Enhanced accessibility with keyboard navigation support
- Added comprehensive documentation of all improvements
- Optimized performance with consolidated assets and lazy loading

All pages now use streamlined assets for better maintainability.

--- a/blog.html
+++ b/blog.html
@@ -38,11 +38,9 @@
     <meta name="twitter:description" content="Pottery blog from Brisbane ceramics artist. Learn wheel throwing techniques, glazing tips, firing advice, and stories from the studio at Bodhi Swan Ceramics.">
     <meta name="twitter:image" content="https://bodhiswan.com/images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg">
     
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/components.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="sitemap" href="/sitemap.xml">
-    <script defer src="assets/js/site.js"></script>
-    <script defer src="assets/js/navigation.js"></script>
+    <script defer src="assets/js/main.js"></script>
 </head>
 <body>
     <div class="container">
