Add comprehensive Google Sheets-based booking system
- Created complete booking calendar with real-time availability
- Implemented Google Apps Script backend for serverless operation
- Added interactive calendar with date/time selection
- Built comprehensive booking form with validation
- Integrated payment information and terms
- Added email confirmation system
- Created setup documentation and instructions
- Updated navigation links to booking system
- Added CSS animations and modern styling
- Tested full booking workflow successfully

Features:
- Serverless Google Sheets backend
- Real-time availability checking
- Interactive calendar interface
- Automated email confirmations
- Mobile-responsive design
- Apple-inspired UI/UX
- Comprehensive error handling
- Demo data fallback system

--- a/faq.html
+++ b/faq.html
@@ -95,6 +95,13 @@
                 
                 <div class="card">
                     <div class="card-body">
+                        <h3 class="mb-4">When do I pay for classes?</h3>
+                        <p>All payments are taken at the beginning of class, unless you are a member paying weekly. This includes the class fee and any additional costs for clay, firing, and glazing.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-body">
                         <h3 class="mb-4">What does the class fee include?</h3>
                         <p>The class fee covers studio access, wheel time, tools, and expert instruction. Clay, firing, and glazing are additional costs to keep pricing flexible based on what you create.</p>
                     </div>
