Remove security marketing language from booking system - clean, simple interface

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h1>Handcrafted Ceramics</h1>
                 <p>Modern minimalist pottery created with traditional wheel-throwing techniques in Brisbane. Each piece tells a story of craftsmanship and contemporary design.</p>
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="booking.html" class="btn btn-primary btn-lg">Book a Class</a>
+                    <a href="secure-booking.html" class="btn btn-primary btn-lg">Book a Class</a>
                     <a href="gallery.html" class="btn btn-secondary btn-lg">View Gallery</a>
                 </div>
             </div>
